fix(add) bugs