@@ -14,6 +14,7 @@ import com.tungsten.fclauncher.FCLPath;
 import com.tungsten.fclcore.game.Argument;
 import com.tungsten.fclcore.game.Arguments;
 import com.tungsten.fclcore.game.GameRepository;
+import com.tungsten.fclcore.game.JavaVersion;
 import com.tungsten.fclcore.game.LaunchOptions;
 import com.tungsten.fclcore.game.Version;
 import com.tungsten.fclcore.util.StringUtils;
@@ -36,6 +37,8 @@ public class DefaultLauncher extends Launcher {
 
     private CommandBuilder generateCommandLine() throws IOException {
         CommandBuilder res = new CommandBuilder();
+
+        getCacioJavaArgs(res, version, options);
 
         switch (options.getProcessPriority()) {
             case HIGH:
@@ -110,9 +113,11 @@ public class DefaultLauncher extends Launcher {
             res.addDefault("-Dlog4j.configurationFile=", getLog4jConfigurationFile().getAbsolutePath());
         }
 
+        res.addDefault("-Djava.io.tmpdir=", FCLPath.CACHE_DIR);
         res.addDefault("-Dos.name=", "Linux");
         res.addDefault("-Dlwjgl.platform=", "FCL");
         res.addDefault("-Dorg.lwjgl.opengl.libname=", "${gl_lib_name}");
+        res.addDefault("-Dfml.earlyprogresswindow=", "false");
 
         List<String> classpath = repository.getClasspath(version);
 
@@ -165,6 +170,59 @@ public class DefaultLauncher extends Launcher {
 
         res.removeIf(it -> getForbiddens().containsKey(it) && getForbiddens().get(it).get());
         return res;
+    }
+
+    public static void getCacioJavaArgs(CommandBuilder res, Version version, LaunchOptions options) {
+        JavaVersion javaVersion;
+        if (options.getJava().getId() == 0) {
+            javaVersion = JavaVersion.getSuitableJavaVersion(version);
+        } else {
+            javaVersion = options.getJava();
+        }
+        boolean isJava8 = javaVersion.getVersion() == JavaVersion.JAVA_VERSION_8;
+
+        res.addDefault("-Djava.awt.headless=", "false");
+        res.addDefault("-Dcacio.managed.screensize=", options.getWidth() + "x" + options.getHeight());
+        res.addDefault("-Dcacio.font.fontmanager=", "sun.awt.X11FontManager");
+        res.addDefault("-Dcacio.font.fontscaler=", "sun.font.FreetypeFontScaler");
+        res.addDefault("-Dswing.defaultlaf=", "javax.swing.plaf.metal.MetalLookAndFeel");
+        if (isJava8) {
+            res.addDefault("-Dawt.toolkit=", "net.java.openjdk.cacio.ctc.CTCToolkit");
+            res.addDefault("-Djava.awt.graphicsenv=", "net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
+        } else {
+            res.addDefault("-Dawt.toolkit=", "com.github.caciocavallosilano.cacio.ctc.CTCToolkit");
+            res.addDefault("-Djava.awt.graphicsenv=", "com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment");
+            res.addDefault("-Djava.system.class.loader=", "com.github.caciocavallosilano.cacio.ctc.CTCPreloadClassLoader");
+
+            res.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED");
+            res.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED");
+            res.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED");
+            res.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+            res.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
+            res.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED");
+            res.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED");
+            res.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
+            res.add("--add-opens=java.base/java.net=ALL-UNNAMED");
+        }
+
+        StringBuilder cacioClasspath = new StringBuilder();
+        cacioClasspath.append("-Xbootclasspath/").append(isJava8 ? "p" : "a");
+        File cacioDir = new File(isJava8 ? FCLPath.CACIOCAVALLO_8_DIR : FCLPath.CACIOCAVALLO_17_DIR);
+        if (cacioDir.exists() && cacioDir.isDirectory()) {
+            for (File file : Objects.requireNonNull(cacioDir.listFiles())) {
+                if (file.getName().endsWith(".jar")) {
+                    cacioClasspath.append(":").append(file.getAbsolutePath());
+                }
+            }
+        }
+        res.add(cacioClasspath.toString());
     }
 
     public Map<String, Boolean> getFeatures() {
